# mcp-main

./: .gitignore  Containerfile  Dockerfile  config.yaml  fly.toml  mcp-tools.py  pyproject.toml  start.sh
test/: client_test.py
