[project]
name = "hello_mcp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.14.0"
dependencies = [
    "chuk-mcp-runtime[websocket]>=0.6.5",
    "fastapi>=0.116.1",
    "pytz>=2025.2",
    "tzdata>=2025.2",
    "uvicorn>=0.35.0",
    "requests",
    "fastmcp (>=2.14.2,<3.0.0)"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
